SERVER-31995 omit cloner stats from initial sync stats if too large

(cherry picked from commit 1a605a99bdc242fd957afdb6e9fe9b8f9c32c862)